@@ -490,12 +490,6 @@ for border removal).</p>
       <td>Main menu gets out of sync when playing digidrums</td>
     </tr>
     <tr>
-      <td>M.C.S:
-      <a href="http://pouet.net/prod.php?which=21348">Delirious 4</a></td>
-      <td class="minor">1.1</td>
-      <td>FDC timings error in loader</td>
-    </tr>
-    <tr>
       <td>Next:
       <a href="http://pouet.net/prod.php?which=496">Phaleon Giga Demo</a></td>
       <td>1.0</td>
@@ -1266,6 +1260,13 @@ are just STE enhanced.  These are marked with '*'.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Electronic Images:
+      <a href="http://www.pouet.net/prod.php?which=21037">Music Dream II</a></td>
+      <td>1.5</td>
+      <td>This demo requires accurate values when reading dma sound address ($ff8909/0b/0d)
+	  and won't work correctly with Hatari &lt; 1.5</td>
+    </tr>
+    <tr>
       <td>GGN:
       <a href="http://www.pouet.net/prod.php?which=7871">The Sierpinski overdose 4K</a></td>
       <td>1.0</td>
@@ -1316,13 +1317,6 @@ are just STE enhanced.  These are marked with '*'.</p>
       <td></td>
     </tr>
     <tr>
-      <td>Electronic Images:
-      <a href="http://www.pouet.net/prod.php?which=21037">Music Dream II</a></td>
-      <td>1.5</td>
-      <td>This demo requires accurate values when reading dma sound address ($ff8909/0b/0d)
-	  and won't work correctly with Hatari &lt; 1.5</td>
-    </tr>
-    <tr>
       <td>Light:
       <a href="http://www.pouet.net/prod.php?which=14448">E605</a></td>
       <td>before 1.0</td>
@@ -1351,6 +1345,15 @@ are just STE enhanced.  These are marked with '*'.</p>
       <a href="http://atari.freemind-tobe.com/">Tribute to Rainbow TOS</a></td>
       <td>1.1</td>
       <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>M.C.S:
+      <a href="http://pouet.net/prod.php?which=21348">Delirious 4</a></td>
+      <td class="minor">1.6</td>
+      <td>Requires at least Hatari 1.6 for correct FDC emulation and for
+	some of the overscan screens. In 3 demos, the STE is not correctly
+	detected. Contrary to what may be indicated, this demo is bugged
+	and only runs on STE, even if most screens are STF only !</td>
     </tr>
     <tr>
       <td>New Core:
